# pdfsearch

./: Cargo.toml
src/: app.rs  lib.rs  main.rs  search.rs
