[package]
name = "pdfsearch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version="0.26.2", features = ["persistence"] }
egui = "0.26.2"
egui_extras = "0.26.2"
pdf-extract = "0.7.4"
rfd = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
